fix firefox toolbar color

--- a/chrome/bon_components/menu.css
+++ b/chrome/bon_components/menu.css
@@ -11,5 +11,6 @@
     position: fixed;
     left: 0;
     height: var(--urlbar-height);
+    background-color: var(--rose-quartz-background);
   }
 }
