--- a/chrome/bon_components/theme.css
+++ b/chrome/bon_components/theme.css
@@ -2,7 +2,7 @@
   --s-toolbar-fg: rgb(255, 112, 141) !important;
   --s-toolbar-bg: #000000ff !important;
   /*custom value*/
-  --rose-quartz-foreground: #e76680;
+  --rose-quartz-foreground: #e67d99;
   --rose-quartz-background: #1d0c13;
   --rose-quartz-background-light: #efd1de;
 
