--- a/chrome/components/ogx_root-personal.css
+++ b/chrome/components/ogx_root-personal.css
@@ -21,7 +21,7 @@
   --red: #ff3230;
   --navyblue: #0050ce;
   --poison: #cb17cf;
-  --rosequartz: #e76680;
+  --rosequartz: #e67d99;
   /*                                                                                                                                 
     Accent color -----> UI del navegador.  -----|                  |---- userContent <------------ Accent color
                                                 |                  |     (Add-ons, preferences and newtab page.)
