--- a/yasb/styles.css
+++ b/yasb/styles.css
@@ -228,7 +228,7 @@
 
 /* Clock */
 .calendar {
-  background-color: var(--bg-primary);
+  background-color: var(--bg-transparent);
 }
 .calendar .calendar-table,
 .calendar .calendar-table::item {
@@ -280,7 +280,7 @@
   padding: 8px;
 }
 .audio-menu {
-  background-color: var(--bg-primary);
+  background-color: var(--bg-transparent);
 }
 .audio-container .device {
   padding: var(--padding-volume);
@@ -348,7 +348,7 @@
   color: var(--color-red);
 }
 .traffic-menu {
-  background-color: var(--bg-primary);
+  background-color: var(--bg-transparent);
   min-width: 320px;
 }
 .traffic-menu .header .title {
@@ -575,9 +575,11 @@
 .media-menu {
   min-width: 450px;
   max-width: 450px;
-  background-color: var(--bg-primary);
+  background-color: var(--bg-transparent);
 }
-.media-menu .title,
+.media-menu .title {
+  margin: var(--md);
+}
 .media-menu .artist,
 .media-menu .source {
   font-size: var(--text-lg);
